--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>TaskList</title>
-    
-    
 <h1>id: 
 <%= @task.id %>
  のメッセージ編集ページ</h1>
 
-<%= form_for(@task) do |f| %>
-
-  
-<%= f.label :content, 'メッセージ' %>
-
-  
-<%= f.text_field :content %>
-
-
-  
-<%= f.submit '投稿' %>
-
-<% end %>
+<%= render 'form', task: @task %>
 
 
 <%= link_to '一覧に戻る', tasks_path %>
-
-
-
