--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,11 +7,14 @@
 <%= @task.id %>
  のメッセージ詳細ページ</h1>
 
-<p>
-<%= @task.content %>
+<p>タイトル:
+<%= @task.status %>
 
 </p>
 
+<p>メッセージ: 
+<%= @task.content %>
+</p>
 
 
 <%= link_to '一覧に戻る', tasks_path %>
