--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,6 @@
 <h1>id: 
 <%= @task.id %>
-のメッセージ編集ページ</h1>
+のタスク編集ページ</h1>
 
 <%= render 'form', task: @task %>
 
-<%= link_to '一覧に戻る', tasks_path %>
