--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,14 @@
   </head>
 
   <body>
+    
+<%= render 'layouts/navbar' %>    
+    
     <div class="container">
       
+
+
+
 <%= render 'layouts/flash_tasks' %>
 
 
@@ -31,4 +37,3 @@
 
     </div>
   </body>
-</html>
